<resources>
    <string name="title_activity_edit_persion_info">EditPersionInfoActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_next_to_login">nextToLoginActivity</string>
    <string name="title_activity_sub_custon_remind">SubCustonRemindActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="metric_switch">Metric and inch switchover</string>
    <string name="change_info">Modified data</string>
    <string name="change_pwd">Modified password</string>
    <string name="old_pwd">Old password</string>
    <string name="new_pwd">New password</string>
    <string name="confirm_pwd">Confirm new password</string>
    <string name="old_pwd_not_null">Please enter the correctly old password </string>
    <string name="new_pwd_enter">Please enter the correctly new password </string>
    <string name="confirm_the_pwd">Please enter password again </string>
    <string name="double_pwd_not">The passwords which are entered twice are not consistent </string>
    <string name="pwd_change_success">The passwords are successfully modified!</string>
    <string name="pwd_failed_the_same">The modification fails, the new passwords are same as old passwords!</string>
    <string name="pwd_failed_diff">The modification fails, and the passwords which are entered twice are not consistent </string>
    <string name="is_not_compatible_version">Dear, the current version is not a compatible version, you must upgrade!</string>
    <string name="is_latest_version">Hello, the current  version already is the latest version!</string>
    <string name="factory_settings">Restore factory settings</string>
    <string name="factory_settings_title">Recover device factory settings </string>
    <string name="factory_settings_remind">Recover device settings of the connected device and all device data will be cleared,continue to clear? </string>
    <string name="factory_reset_seccess">The factory settings have been recoveried!</string>
    <string name="factory_reset_failed">The recovery of the factory settings fails, please try again!</string>
    <string name="hardware_update">Upgrading:</string>
    <string name="download_failed">Download fails！</string>
    <string name="download_complete">Download is completed, and please click it to install</string>
    <string name="download_progress">Scheduling</string>
    <string name="file_download_failed">File download failed!</string>
    <string name="action_sign_in">Log in / Register</string>
    <string name="enter_text">Direct use</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">4 to 32 characters</string>
    <string name="error_invalid_password">6 to 32 characters </string>
    <string name="error_field_required">Account number cannot be null</string>
    <string name="app_name">Mistep</string>
    <string name="device_adm">Device</string>
    <string name="setting_remind">Reminding</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="account">Not log in</string>
    <string name="nickname">Nickname</string>
    <string name="disconnected">Not connected</string>
    <string name="connect_to_device">Connecting device</string>
    <string name="today_movement">Today\'s activity</string>
    <string name="target_settingf">Target:</string>
    <string name="movement_time_total">Active time</string>
    <string name="km_total">km</string>
    <string name="mile">Mile</string>
    <string name="degre_completion">Complete</string>
    <string name="movement_detail">Sport details</string>
    <string name="movement_state">Amount of exercise</string>
    <string name="movement_active">Active</string>
    <string name="calorie_text">\tKcal</string>
    <string name="share_text">Sharing</string>
    <string name="send_share">Sending</string>
    <string name="trend_week_text">Week</string>
    <string name="trend_month_text">Mon</string>
    <string name="target_setting">Goal setting</string>
    <string name="persion_info_text">Personal information</string>
    <string name="edit_nick_name">Nickname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_available_email">enter a valid mailbox</string>
    <string name="select_birthday">select a date of birth</string>
    <string name="enter_true_height">enter the true height</string>
    <string name="enter_true_weight">enter the true weight</string>
    <string name="edit_persion_Info">Edit Information</string>
    <string name="persion_info_edit_ok">Personal data are completely modified</string>
    <string name="take_photo_action">Camera</string>
    <string name="selecte_from_local">Choose from local photo album</string>
    <string name="cancle">Cancel</string>
    <string name="protaril">Photograph</string>
    <string name="ble_not_support">The current device does not support the low power Bluetooth function</string>
    <string name="make_sure">Please make sure that the bluetooth function of the phone is opened</string>
    <string name="close_text">Closing</string>
    <string name="ble_device_text">Bluetooth device</string>
    <string name="device_connecte_successful">Connection success</string>
    <string name="device_connecte_failed">Connection failing</string>
    <string name="year_ago">Year ago</string>
    <string name="month_ago">Month ago</string>
    <string name="day_age">Today\'s age</string>
    <string name="today">Today</string>
    <string name="connecte_the_device">Connection</string>
    <string name="connecte_device_failed">Connection fails</string>
    <string name="device_already_disconnecte">Device has been disconnected</string>
    <string name="device_already_delete">Device has been deleted</string>
    <string name="image">image</string>
    <string name="movement_image">movement_image</string>
    <string name="text">text</string>
    <string name="already_con">Connected</string>
    <string name="not_onn">Not connected</string>
    <string name="sport_band">Mistep</string>
    <string name="band_explain">Safe, convenient, and stable smart sport APP</string>
    <string name="app_viersion">APP V:</string>
    <string name="hard_version">Firmware V:</string>
    <string name="check_update">check update</string>
    <string name="target_pager_text">Set up the corresponding goal according to personal data！</string>
    <string name="sport_target">steps target</string>
    <string name="zhengchang">Normal</string>
    <string name="pianshao">Less</string>
    <string name="huoyue">Active</string>
    <string name="chongzu">Adequate</string>
    <string name="henchongzu">Very adequate</string>
    <string name="daren">Talent</string>
    <string name="sleep_target">Sleep time</string>
    <string name="sleep_state">Sleep quality</string>
    <string name="liang_hao">Well</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="light_sleep">Light sleep</string>
    <string name="exit">Exit</string>
    <string name="login">Log in </string>
    <string name="login_out_login_in">Log off </string>
    <string name="account_text">account</string>
    <string name="password">password</string>
    <string name="forget_pwd">\?</string>
    <string name="enter_the_your_count">Please enter account number：</string>
    <string name="get_the_password">Find password</string>
    <string name="scrolling_date_wheel">Please roll time wheel to select your birthday：</string>
    <string name="not_null">This item cannot be null</string>
    <string name="custom_remind">Custom settings</string>
    <string name="be_true">OK</string>
    <string name="be_cancle">Cancel</string>
    <string name="sport_strength">type</string>
    <string name="edit_sport_name">Edit test mode</string>
    <string name="device_list">device list</string>
    <string name="movement_heart_round">heart rate range</string>
    <string name="movement_durtion">duration</string>
    <string name="movement_percentage">ratio</string>
    <string name="brachlet">bracelet</string>
    <string name="watch">watch</string>
    <string name="not_bind">unbound</string>
    <string name="bind_device">bind the device</string>
    <string name="bind_device_steps">Binding steps</string>
    <string name="first_steps">How to bind device?\n \t\t1.The first step:</string>
    <string name="second_steps">\t\t2.The second step:</string>
    <string name="third_steps">\t\t3.The third step:</string>
    <string name="other_steps">How to solve connecting overtime after binding device
                                    \n1、Please confirm whether the phone bluetooth is turned on
                                    \n2、Please confirm whether the device is connected by other mobile phones. If there is bluetooth icon in the device time interface, which means that the device is connected by others. Please disconnect.
                                    \n3、When connecting, please light up the device screen, because the device bluetooth radio will close if the screen off and device not connected in 20 minutes.
                                    \n4、Please make the device near at the phone, the close the better
                                    \nIf the above operations still can not be connected successfully, please restart phone bluetooth or mobile phone. </string>
    <string name="first_steps_01">Open APP side bar to device interface ,and please also confirm that phone bluetooth is on.</string>
    <string name="second_steps_02">Choose the device type same as the device is to be bound （bracelet or watch）. If not ,go to device type interface and change</string>
    <string name="third_steps_02">Click “bind the device” to choose and connect corresponding device, and then return to device interface.</string>
    <string name="title_one">Blood pressure monitoring based on PPG, due to personal physical difference, need to benchmark their blood pressure used for correction of blood flow changes, the corresponding relationship between blood pressure measurement for the first time, please enter your baseline blood pressure。</string>
    <string name="title_two">Please choose a traditional accurate blood pressure monitor, and input the information box standard blood pressure values</string>
    <string name="title_three">Please enter the correct blood pressure
</string>
    <string name="diastolic_blood_pressure">Diastolic blood pressure
</string>
    <string name="systolic_pressure">Systolic blood pressure</string>
<string name="title_four">Please keep the watch with blood pressure APP is connected, completed, please watch with your blood pressure test immediately once the blood pressure, blood pressure calibration is completed, the subsequent measurement without correction again
</string>
    <string name="title_five">Personal data interface can be modified at baseline blood pressure。
</string>
    <string name="affirm">determine</string>
    <string name="cancel">cancel</string>
    <string name="remind_top_one">Please send mistep added to the whitelist</string>
    <string name="remind_top_two">Ensure that mobile phone to receive notifications</string>
    <string name="remind_top_three">Please try in security assistant software will mistep</string>
    <string name="remind_top_four">Since the launch of to join in</string>
    <string name="know_l">Know the</string>
    <string name="No_longer_remind">Not prompt</string>
</resources>