<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.huichenghe.xinlvshuju.expand_activity.help_bind_device"
    android:background="@color/White_forme">

    <RelativeLayout
        android:id="@+id/bind_device_step_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <ImageView
            android:id="@+id/back_button_re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back_icon_new"
            android:padding="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_device_steps"
            android:textColor="@color/black_color"
            android:textSize="@dimen/text_size_middle"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <View
        android:id="@+id/div_div"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_color_dark"
        android:layout_below="@id/bind_device_step_layout"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/div_div">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/note_step_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_steps"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="16dp"/>
            <TextView
                android:id="@+id/note_step_one_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_steps_01"
                android:textSize="@dimen/text_size_small"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/note_step_one"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/step_icon_one"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/step_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brachlet"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="56dp"
                    android:textColor="@color/black_color"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_bind"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="158dp"
                    android:layout_marginRight="30dp"
                    android:singleLine="true"
                    android:textColor="@color/White_forme"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/step_two_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_steps"
                android:textSize="@dimen/text_size_small"/>
            <TextView
                android:id="@+id/step_two_steps_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_steps_02"
                android:textSize="@dimen/text_size_small"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/step_two_steps"
                android:layout_gravity="center_horizontal">



                <ImageView
                    android:id="@+id/step_icon_two"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_list"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/black_color"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brachlet"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/black_color"
                    android:layout_marginTop="170dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watch"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/black_color"
                    android:layout_alignParentBottom="true"/>


            </RelativeLayout>

            <TextView
                android:id="@+id/note_step_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_steps"
                android:textSize="@dimen/text_size_small"/>
            <TextView
                android:id="@+id/note_step_three_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_steps_02"
                android:textSize="@dimen/text_size_small"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/note_step_three"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/step_icon_three"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:src="@mipmap/step_three"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bind_device"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/White_forme"
                    android:layout_marginTop="63dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_to_device"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/black_color"
                    android:layout_marginTop="180dp"/>

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_steps"
                android:textSize="@dimen/text_size_small"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
