<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/movement_item_background"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="@dimen/text_size_small_add"
            android:text="@string/sport_strength"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="@dimen/text_size_small_add"
            android:text="@string/movement_heart_round"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="@dimen/text_size_small_add"
            android:text="@string/movement_durtion"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="@dimen/text_size_small_add"
            android:text="@string/movement_percentage"/>




    </LinearLayout>



</RelativeLayout>